Conect Banco Mysql

--- a/LojaVirtual.ProdutoApi/appsettings.json
+++ b/LojaVirtual.ProdutoApi/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "MySQL": "Server=localhost;DataBase=LojaVirtual;Uid=root;Pwd=12345"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
